# fhevm

./: (edit .gitignore)  .commitlintrc.json  .czrc  .dockerignore  .editorconfig  .env  .env.compose  .env.example  .env.example.deployment  .env.test  .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  .hadolint.yaml  .lintstagedrc.json  .mergify.yml  .npmignore  .npmrc  .prettierignore  .prettierrc.json  .prettierrc.yml  .slither.config.json  .solcover.js  .solhint.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_OVERVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CustomProvider.ts  DEVELOPERS-OVERVIEW.md  Dockerfile  FINDINGS.md  GATEWAY_V2_DESIGN.md  GLOSSARY.md  LICENSE  LICENSE_LOCAL.md  (+84 more)
apps/contract-event-listener/: Cargo.toml
apps/relayer/: .dockerignore  .env.compose  .env.template  .gitignore  .redocly.yaml  CLAUDE.md  Cargo.toml  LOGGING_POLICY.md  Makefile  Orchestrator.md  README.md  compose.toml  config.toml  debug.toml  deny.toml  openapi-async-design.yaml  openapi-current.yaml  run-tests.sh  setup-config.sh
coprocessor/fhevm-engine/: .gitignore  Cargo.toml  Dockerfile.workspace  Makefile  rust-toolchain.toml
fhevm-engine/: .gitignore  Cargo.toml  build.rs  docker-compose.yml
fhevm-engine/.cargo/: deny.toml
fhevm-engine/.sqlx/: query-2a1d204391cc36d74d12fd4c4dea5a33b30ce93fd4122dbd94cab6d9309358c0.json  query-4b48296e5ecf0a6e6a50aefdaa83f6ae667cb0b284ec64ddfbd68da697573085.json  query-7a10f7fd760e16bb6333f63097e1f08ee5761187a24d6897391e7c9b82386d27.json  query-80d29059e0d56c3e3b92d98b68cff622e857564cba1193edc4837d604c322b7e.json  query-af5a9e817d8447b94c957f34070db77805483ee92daa64b0b2a78134d702eaf3.json  query-af833a0f2ac5dd8be30e1de778d9357549bca862b75891a887c86d7e50e24e66.json  query-c4a8cd701c76572b62939f26b74cdf1a7f8a5c436422f0334382da23505832a7.json  query-fa08cf4a183d63604f9d53640417d9055245a0f1b5cb4c89cf556767d2549cec.json
fhevm-engine/coprocessor/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  migrations
fhevm-engine/executor/: Cargo.toml  README.md  build.rs
fhevm-engine/fhevm-db/: Dockerfile  initialize_db.sh
fhevm-engine/fhevm-engine-common/: Cargo.toml  build.rs
fhevm-engine/fhevm-go-coproc/: Makefile  README.md  go.mod
fhevm-engine/fhevm-go-native/: .gitmodules  Makefile  README.md  go.mod  go.sum
fhevm-engine/fhevm-keys/: .gitattributes  cks  gpu-cks  pks  pp  sks  sns_pk  sns_sk
fhevm-engine/fhevm-listener/: Cargo.toml  README.md  build.rs
fhevm-engine/gw-listener/: Cargo.toml  README.md
fhevm-engine/listener/: Cargo.toml  README.md
fhevm-engine/migrations/: 20240722111257_coprocessor.sql  20240723111257_coprocessor.sql  gen-keys.sh
fhevm-engine/proto/: coprocessor.proto
fhevm-engine/scheduler/: Cargo.toml
fhevm-engine/sns-executor/: Cargo.toml  README.md
fhevm-engine/src/: cli.rs  db_queries.rs  main.rs  server.rs  tfhe_ops.rs  tfhe_worker.rs  types.rs  utils.rs
fhevm-engine/test-harness/: Cargo.toml
fhevm-engine/transaction-sender/: Cargo.toml  build.rs
fhevm-engine/zkproof-worker/: Cargo.toml
gateway-contracts/rust_bindings/: Cargo.toml  rust-toolchain.toml
gwl2_rust_bindings/: Cargo.toml  abi_update.py
gwl2_rust_bindings/abi/: ACLManager.abi  DecryptionManager.abi  ECDSA.abi  EIP712.abi  HTTPZ.abi  IACLManager.abi  IAccessControl.abi  ICiphertextStorage.abi  IDecryptionManager.abi  IHTTPZ.abi  IKeyManager.abi  IZKPoKManager.abi  Ownable.abi  Ownable2Step.abi  ShortStrings.abi  ZKPoKManager.abi
gwl2_rust_bindings/src/: contracts.rs
host-contracts/rust_bindings/: Cargo.toml
httpz_gateway_rust_bindings/: Cargo.toml  README.md
httpz_gateway_rust_bindings/abi/: ACLManager.abi  AccessControl.abi  AccessControlUpgradeable.abi  Address.abi  CiphertextManager.abi  CiphertextStorage.abi  DecryptionManager.abi  EIP712Upgradeable.abi  ERC165Upgradeable.abi  ERC1967Utils.abi  Errors.abi  HTTPZ.abi  IACLManager.abi  IBeacon.abi  ICiphertextManager.abi  IDecryptionManager.abi  IERC1822Proxiable.abi  IERC1967.abi  IERC5267.abi  IHTTPZ.abi  IZKPoKManager.abi  KeyManager.abi  Ownable2StepUpgradeable.abi  OwnableUpgradeable.abi  SafeCast.abi  Strings.abi  UUPSUpgradeable.abi  ZKPoKManager.abi
httpz_gateway_rust_bindings/src/: accesscontrolupgradeable.rs  aclmanager.rs  address.rs  ciphertextmanager.rs  contextupgradeable.rs  contracts.rs  decryption.rs  decryptionmanager.rs  ecdsa.rs  eip712upgradeable.rs  emptyuupsproxy.rs  erc165upgradeable.rs  erc1967utils.rs  errors.rs  fhetypebitsizes.rs  gatewayconfig.rs  handleops.rs  httpz.rs  httpzchecks.rs  iaccesscontrol.rs  iaclmanager.rs  iciphertextcommits.rs  iciphertextmanager.rs  idecryptionmanager.rs  ierc165.rs  ierc1822proxiable.rs  ierc1967.rs  ierc5267.rs  igatewayconfig.rs  ihttpz.rs  iinputverification.rs  ikeymanager.rs  inputverification.rs  interfaces.rs  izkpokmanager.rs  keymanager.rs  lib.rs  math.rs  messagehashutils.rs  mod.rs  (+6 more)
kms-connector/: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.workspace  Makefile  README.md  rust-toolchain.toml
kms-connector/.cargo/: audit.toml  deny.toml
kms-connector/.github/: dependabot.yml
kms-connector/.sqlx/: query-0042a4462b09d106a8e2f96968eb2d67894a88c2b51d522f504fb152f419ba2b.json  query-02ad780727d60f4ec86d11e8ae0ca30a75d77bfcb7582aa96f04cdaceb3b06f3.json  (+277 more)
kms-connector/config/: config-base.toml  gw-listener.toml  (+2 more)
listener/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  ct.yaml  docker-compose.yaml  listener-core.yaml  recipe.json
relayer/: .env.sql-dev.example  .redocly.yaml  Cargo.toml  LOGGING_POLICY.md  Makefile  Orchestrator.md  README.md  coverage-format.jq  openapi.yml
solana/: Anchor.toml  Cargo.toml  DEVELOPMENT_ISSUES.md  DEVELOPMENT_LOGBOOK.md  OZ_BRANCH_GUIDE.md  OZ_GUIDE.md  README.md  TRANSIENT_ALLOW.md  rfc-024-poc-sync.md  rust-toolchain.toml
solana-host-contracts/: .env.example  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md
solana-indexer/: Cargo.toml  README.md  deny.toml
solana-proof-service/: Cargo.toml  Dockerfile  Makefile  README.md
(+11918 files in other folders)
