[package]
name = "kms-connector"
authors = ["Zama"]
publish = true
edition = "2024"
license = "BSD-3-Clause-Clear"
version = "0.11.0-rc7"

[dependencies]
alloy = { version = "=0.14.0", default-features = true,  features = [
    "provider-ws",
    "signer-aws",
    "signer-mnemonic",
] }
anyhow = { version = "=1.0.98", default-features = false }
aws-sdk-kms = { version = "=1.65.0", default-features = true }
bincode = { version = "=1.3.3", default-features = false }  # Couldn't be upgraded because of kms-grpc
bip39 = { version = "=2.1.0", default-features = false }
clap = { version = "=4.5.35", default-features = true, features = ["derive"] }
config = { version = "=0.15.11", default-features = false, features = ["toml"] }
dashmap = { version = "=6.1.0", default-features = false }
futures = { version = "=0.3.31", default-features = false }
serde = { version = "=1.0.219", default-features = false, features = ["derive", "std"] }
sha3 = { version = "=0.10.8", default-features = false }
tfhe = "=1.1.3"
tfhe-versionable = "=0.5.0"
thiserror = { version = "=2.0.12", default-features = false }
tokio = { version = "=1.44.2", default-features = false, features = ["sync", "rt-multi-thread", "signal"] }
tokio-stream = { version = "=0.1.17", default-features = false }
toml = { version = "=0.8.20", default-features = true }
tonic = { version = "=0.13.0", default-features = true, features = ["tls-ring", "tls-native-roots"] }
tracing = { version = "=0.1.41", default-features = true }
url = { version = "=2.5.4", default-features = false }

# AWS S3 dependencies for ciphertext retrieval
aws-config = { version = "=1.6.1", default-features = true }
aws-sdk-s3 = { version = "=1.82.0", default-features = true }

# TODO: substitute with existing KMS-Core implementation
tracing-subscriber = { version = "=0.3.19", default-features = true, features = ["env-filter"] }

# TODO: replace git submodule and path import by git import when kms-core becomes open-source
kms-grpc = { path = "kms-core/core/grpc", default-features = true, features = ["insecure"] }

[dev-dependencies]
tempfile = "=3.19.1"
serial_test = "3.2.0"

[[bin]]
name = "kms-connector"
path = "src/bin/kms-connector.rs"
