[workspace]
resolver = "2"
members = ["coprocessor", "executor", "fhevm-engine-common", "fhevm-listener", "gw-listener", "sns-executor", "transaction-sender", "zkproof-worker"]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[workspace.dependencies]
alloy = { version = "0.11.1", features = ["full", "provider-anvil-api", "provider-anvil-node", "sol-types"] }
anyhow = "1.0.86"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
daggy = "0.8.0"
futures-util = "0.3.31"
prometheus = "0.13.4"
prost = "0.13"
rayon = "1.10.0"
serde = "1.0.210"
sha3 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "time", "postgres", "uuid"] }
tfhe = { version = "0.10.0", features = ["boolean", "shortint", "integer", "zk-pok", "experimental-force_fft_algo_dif4"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7"
tonic = { version = "0.12", features = ["server"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"] }

[profile.dev.package.tfhe]
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
