[workspace]
resolver = "2"
members = ["coprocessor", "executor", "fhevm-engine-common", "fhevm-listener", 
            "gw-listener", "sns-executor", "transaction-sender", "zkproof-worker", "test-harness"]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[workspace.dependencies]
alloy = { version = "=0.11.1", features = ["full", "provider-anvil-api", "provider-anvil-node", "sol-types"] }
anyhow = "=1.0.97"
bincode = "=1.3.3"
clap = { version = "=4.5", features = ["derive"] }
daggy = "=0.8.1"
futures-util = "=0.3.31"
prometheus = "=0.14.0"
prost = "=0.13"
rand = "=0.9.0"
rayon = "=1.10.0"
serde = "=1.0.219"
sha3 = "=0.10.8"
sqlx = { version = "=0.8.3", features = ["runtime-tokio", "tls-rustls", "time", "postgres", "uuid"] }
tfhe = { version = "=1.0.1", features = ["boolean", "shortint", "integer", "zk-pok", "experimental-force_fft_algo_dif4"] }
tfhe-versionable = "=0.5.0"
tokio = { version = "=1.38.1", features = ["full"] }
tokio-util = "=0.7"
tonic = { version = "=0.12", features = ["server"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["fmt", "json"] }
hex = "0.4"


[profile.dev.package.tfhe]
overflow-checks = false

[profile.release]
opt-level = 3
lto = "fat"
