[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Zama"]
edition = "2024"
license = "BSD-3-Clause-Clear"
publish = true
version = "0.14.0"

[workspace.dependencies]

#####################################################################
#                       Internal dependencies                       #
#####################################################################
gw-listener.path = "crates/gw-listener"
kms-worker.path = "crates/kms-worker"
tx-sender.path = "crates/tx-sender"
connector-utils.path = "crates/utils"
fhevm_gateway_bindings = { path = "../gateway-contracts/rust_bindings", default-features = false }
fhevm_host_bindings = { path = "../host-contracts/rust_bindings", default-features = false }
kms-grpc = { git = "https://github.com/zama-ai/kms.git", rev = "b9087af025de26cd6ada5033e8044b05a518cf22", default-features = true }
bc2wrap = { git = "https://github.com/zama-ai/kms.git", rev = "b9087af025de26cd6ada5033e8044b05a518cf22", default-features = true }
tfhe = { version = "=1.6.2", default-features = false }
user-decryption-signature = { path = "../shared/user-decryption-signature", default-features = false }
ciphertext-attestation = { path = "../shared/ciphertext-attestation" }
zama-solana-acl = { path = "../solana/crates/zama-solana-acl" }

#####################################################################
#                       External dependencies                       #
#####################################################################
actix-web = "=4.11.0"
borsh = { version = "=1.5.7", default-features = false, features = ["derive"] }
alloy = { version = "=1.0.38", default-features = false, features = [
    "essentials",
    "provider-debug-api",
    "provider-ws",
    "reqwest-rustls-tls",
    "signer-aws",
    "std",
] }
anyhow = { version = "=1.0.102", default-features = false }
async-trait = { version = "=0.1.89", default-features = false }
aws-config = { version = "=1.8.6", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
] }
aws-sdk-kms = { version = "=1.86.0", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
] }
aws-sdk-s3 = { version = "=1.105.0", default-features = true }
clap = { version = "=4.5.47", default-features = true, features = [
    "cargo",
    "derive",
] }
config = { version = "=0.15.19", default-features = false, features = ["toml"] }
dashmap = { version = "=6.1.0", default-features = false }
futures = { version = "=0.3.31", default-features = false }
git-version = { version = "=0.3.9", default-features = false }
humantime-serde = "=1.1.1"
opentelemetry = "=0.30.0"
opentelemetry-otlp = { version = "=0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "=0.30.0"
prometheus = { version = "=0.14.0", default-features = false, features = ["protobuf"] }
base64 = "=0.22.1"
reqwest = { version = "=0.12.24", default-features = false, features = [
    "rustls-tls",
] }
ring = "=0.17.14"
rustls = { version = "=0.23.40", default-features = false, features = [
    "aws-lc-rs",
] }
serde = { version = "=1.0.228", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = { version = "=1.0.145", default-features = false, features = [
    "std",
] }
sha2 = { version = "=0.10.9", default-features = false }
sha3 = { version = "=0.10.8", default-features = false }
solana-pubkey = { version = "=2.4.0", default-features = false, features = [
    "curve25519",
] }
sqlx = { version = "=0.8.6", default-features = false, features = [
    "chrono",
    "derive",
    "macros",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = { version = "=2.0.18", default-features = false }
tokio = { version = "=1.47.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = { version = "=0.7.18", default-features = false }
tokio-stream = { version = "=0.1.17", default-features = false }
tonic = { version = "=0.14.6", default-features = true, features = [
    "tls-ring",
    "tls-native-roots",
] }
tonic-health = { version = "=0.14.5", default-features = false }
tracing = { version = "=0.1.44", default-features = true }
tracing-opentelemetry = "=0.31.0"
tracing-subscriber = { version = "=0.3.20", default-features = true, features = [
    "env-filter",
] }
url = { version = "=2.5.8", default-features = false, features = ["serde"] }

#####################################################################
#                       Testing dependencies                        #
#####################################################################
mocktail = "=0.3.2"
rand = "=0.9.2"
rstest = "=0.26.1"
serial_test = "3.2.0"
testcontainers = "=0.27.3"
toml = { version = "=0.9.8", default-features = true }
tracing-test = { version = "=0.2.5", default-features = false }

[profile.local]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
