[package]
name = "fhevm-relayer"
version = "0.9.0-rc.3"
license = "BSD-3-Clause-Clear"
edition = "2021"

[lib]
name = "fhevm_relayer"
path = "src/lib.rs"

[features]
default = []
tracing-chrome = ["dep:tracing-chrome"]
long-running-tests = []
integration-tests = []

[dependencies]
alloy = { version = "1.7.3", features = [
  "consensus",
  "json-rpc",
  "provider-ws",
  "serde",
  "signer-aws",
] }
aws-config = "1.8.15"
aws-sdk-kms = { version = "1.104.0", default-features = false, features = [
  "default-https-client",
  "rt-tokio",
] }
dashmap = "6.1.0"
derivative = "2.2"
ed25519-dalek = "2"
futures = "0.3.32"
hex = "0.4.3"
moka = { version = "0.12.13", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
async-trait = "0.1.51"
thiserror = "2.0.18"
config = "0.15.19"
anyhow = "1.0.102"
uuid = { version = "1.21.0", features = ["serde", "v4", "v7", "std"] }
reqwest = { version = "0.13.2", features = ["json"] }
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-chrome = { version = "0.7.2", optional = true }
prometheus = "0.14"
clap = { version = "4.5.60", features = ["derive"] }
rustls = { version = "0.23.36", features = [
  "aws-lc-rs",
], default-features = false }
# Path dependency to stay up to date and in sync with the shared crate.
fhevm_gateway_bindings = { path = "../gateway-contracts/rust_bindings", default-features = false }
# Use a pinned version of fhevm host bindings contract as the feature branch is still unmerged.
fhevm_host_bindings = { git = "https://github.com/zama-ai/fhevm.git", rev = "2a6cf820b", default-features = false }
# Shared utils for signature verification in user-decrypt requests.
user-decryption-signature = { path = "../shared/user-decryption-signature" }
# Shared MMR/lineage proof math for the Solana ACL (RFC-024); source of truth
# also used by the zama-host program and the KMS connector.
zama-solana-acl = { path = "../solana/crates/zama-solana-acl" }
borsh = { version = "1", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_path_order"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
chrono = { version = "0.4.43", features = ["serde"] }
humantime = "2.3.0"
governor = "0.10.4"
indexmap = "2.13.0"
serde_yaml = "0.9"

[build-dependencies]
built = { version = "0.8", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }


[dev-dependencies]
# `signer-local` (PrivateKeySigner) is needed to forge EOA signatures in pre-check tests;
# the mock provider used there is already available via the `json-rpc` feature above.
alloy = { version = "1.7.3", features = ["signer-local"] }
tempfile = "3.25.0"
rand = "0.10.0"
rstest = "0.26.1"
serde_yaml = "0.9.34"
serial_test = "3.4.0"
ethereum_rpc_mock = { path = "test-support/ethereum_rpc_mock" }
