[workspace]
members = [
    "crates/core",
    "crates/test-input-core",
    "crates/confidential-token-core",
    "local-cli",
    "programs/solana-host-contracts",
    "programs/solana-test-input-program",
    "programs/solana-confidential-token-program",
]
resolver = "2"

[profile.release]
overflow-checks = true
