[workspace]
resolver = "2"
members = [
    "crates/confidential-token-receiver-sdk",
    "crates/zama-fhe",
    "programs/confidential-token",
    "programs/confidential-token-receiver",
    "programs/zama-host",
    "runtime-tests",
]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
