[workspace]
resolver = "2"
members = [
    "crates/solana-ed25519-instruction",
    "crates/zama-fhe",
    "crates/zama-solana-acl",
    "programs/confidential-deposit-app",
    "programs/confidential-token",
    "programs/zama-host",
    "runtime-tests",
]

[workspace.package]
authors = ["Zama"]
edition = "2021"
license = "BSD-3-Clause-Clear"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
