[package]
name = "contract-event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
fhevm-relayer = { git = "ssh://git@github.com/zama-ai/fhevm-relayer.git" , branch="main"}
tokio = {version="^1.43.0", features=["full"]}
dotenv = {version="^0.15.0"}
alloy = {version="^0.9.2"}
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[[bin]]
name = "contract-event-listener"
