[package]
name = "fhevm-relayer"
version = "0.3.0"
license = "BSD-3-Clause-Clear"
edition = "2021"

[lib]
name = "fhevm_relayer"
path = "src/lib.rs"

[features]
default = []
tracing-chrome = ["dep:tracing-chrome"]
ci = []

[dependencies]
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }
alloy = { version = "1.0.22", features = ["provider-ws"] }
dashmap = "6.1.0"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
async-trait = "0.1.51"
thiserror = "2.0.11"
config = "0.15.6"
anyhow = "1.0.44"
strum_macros = "0.21.0"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = "0.12.12"
axum = "0.2.5"
http = "0.2"
rusqlite = "0.33.0"
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-chrome = { version = "0.7.2", optional = true }
prometheus = "0.14"
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1" }
rustls = { version = "0.23", features = [
  "aws-lc-rs",
], default-features = false }
rocksdb = {version = "0.23.0", default-features = false, features = ["snappy", "bindgen-runtime"]}
fhevm_gateway_rust_bindings = { git = "https://github.com/zama-ai/fhevm.git", tag = "v0.8.0-3" }



[dev-dependencies]
ctor = { version = "0.4" }
alloy-provider = { version = "1.0.22", features = ["anvil-node"] }
nix = { version = "0.30.1", features = ["process", "signal"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tempfile = "3.10.1"
