[package]
name = "fhevm-relayer"
version = "0.9.0-rc.3"
license = "BSD-3-Clause-Clear"
edition = "2021"

[lib]
name = "fhevm_relayer"
path = "src/lib.rs"

[features]
default = []
tracing-chrome = ["dep:tracing-chrome"]
long-running-tests = []

[dependencies]
alloy = { version = "1.2.1", features = ["consensus", "json-rpc", "provider-ws", "serde"] }
alloy-dyn-abi = "1.4.1"
dashmap = "6.1.0"
derivative = "2.2"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7"
async-trait = "0.1.51"
thiserror = "2.0.11"
config = "0.15.6"
anyhow = "1.0.44"
strum_macros = "0.21.0"
uuid = { version = "1", features = ["serde", "v4", "v7", "std"] }
reqwest = "0.12.12"
axum = "0.8.4"
http = "0.2"
tower = "0.5.2"
tower_governor = "0.8.0"
rand = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-chrome = { version = "0.7.2", optional = true }
prometheus = "0.14"
once_cell = "1.19"
clap = { version = "4", features = ["derive"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
rustls = { version = "0.23", features = [
  "aws-lc-rs",
], default-features = false }
fhevm_gateway_bindings = { git = "https://github.com/zama-ai/fhevm.git", tag = "v0.10.3", default-features = false }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = { version = "0.2" }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "macros", "postgres", "runtime-tokio", "uuid"] }
chrono = { version = "0.4.42", features = ["serde"] }
humantime = "2.3.0"
governor = "0.10.4"
indexmap = "2.12.1"

[build-dependencies]
built = { version = "0.8", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }


[dev-dependencies]
alloy-provider = { version = "1.0.22", features = ["anvil-node"] }
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tempfile = "3.10.1"
ethereum_rpc_mock = { path = "test-support/ethereum_rpc_mock" }
tower = { version = "0.5.2", features = ["util"] }
rstest = "0.21.0"
serde_yaml = "0.9"
