[package]
name = "fhevm-relayer"
version = "0.9.0-rc.3"
license = "BSD-3-Clause-Clear"
edition = "2021"

[lib]
name = "fhevm_relayer"
path = "src/lib.rs"

[features]
default = []
tracing-chrome = ["dep:tracing-chrome"]
long-running-tests = []

[dependencies]
alloy = { version = "1.7.3", features = [
  "consensus",
  "json-rpc",
  "provider-ws",
  "serde",
] }
dashmap = "6.1.0"
derivative = "2.2"
eyre = "0.6.12"
futures = "0.3.32"
hex = "0.4.3"
moka = { version = "0.12.13", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
async-trait = "0.1.51"
thiserror = "2.0.18"
config = "0.15.19"
anyhow = "1.0.102"
uuid = { version = "1.21.0", features = ["serde", "v4", "v7", "std"] }
reqwest = { version = "0.13.2", features = ["json"] }
axum = "0.8.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-chrome = { version = "0.7.2", optional = true }
prometheus = "0.14"
once_cell = "1.19"
clap = { version = "4.5.60", features = ["derive"] }
rustls = { version = "0.23.36", features = [
  "aws-lc-rs",
], default-features = false }
fhevm_gateway_bindings = { git = "https://github.com/zama-ai/fhevm.git", tag = "v0.10.3", default-features = false }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
chrono = { version = "0.4.43", features = ["serde"] }
humantime = "2.3.0"
governor = "0.10.4"
indexmap = "2.13.0"

[build-dependencies]
built = { version = "0.8", features = [
  "cargo-lock",
  "dependency-tree",
  "git2",
  "chrono",
  "semver",
] }


[dev-dependencies]
tempfile = "3.25.0"
ethereum_rpc_mock = { path = "test-support/ethereum_rpc_mock" }
rand = "0.10.0"
rstest = "0.26.1"
serde_yaml = "0.9.34"
